Changelog for Dist-Zilla-PluginBundle-CPANTesters

{{ $NEXT }}

0.001     2025-05-12 15:38:30-05:00 America/Chicago

  - Initial release: A copy of all the non-dist-specific Dist::Zilla rules
    from one of the CPAN Testers projects (cpantesters-schema, I believe).